[package]
name = "gambatte"
version = "0.1.0"
authors = ["MrWint"]
edition = "2018"
links = "gambatte"
build = "build.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
bitflags = "1.0"
byteorder = "1.2.7"
log = { version = "0.4", features = ["std"] }
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"

[features]
default = []
# Tracks inputs on the wrapper level. Slow on long-running input sequences, but useful for debugging desyncs.
track-inputs = []
